# AI-Powered-Financial-Decision-Engine

./: README.md
backend/: .gitignore  package-lock.json  package.json
backend/scripts/: applySchema.js  seedTransactions.js
backend/scripts/seed-data/: demo-users-1-5.csv
backend/scripts/sql/: 001_schema.sql  002_rules_and_cache_meta.sql
backend/src/: app.js  server.js
backend/src/config/: env.js  index.js
backend/src/controllers/: assistantController.js  dashboardController.js  healthController.js  predictController.js  rulesController.js  simulationController.js  summaryController.js  transactionsController.js
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
ml_model/ml-service/: .gitignore  pyproject.toml  requirements.txt
ml_model/ml-service/app/: deps.py  main.py
ml_model/ml-service/app/core/: __init__.py  config.py  exceptions.py  log.py  logging_config.py
ml_model/ml-service/app/domain/: financial_rules.py  hybrid_risk.py
ml_model/ml-service/app/routes/: predict.py
ml_model/ml-service/app/schemas/: predict_schema.py
ml_model/ml-service/app/services/: explain_service.py  feature_service.py  model_service.py
ml_model/ml-service/app/types/: __init__.py  bundle.py
ml_model/ml-service/financial_ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml_model/ml-service/tests/: test_api.py  test_feature_engineering.py  test_hybrid_risk.py
ml_model/ml-service/training/: constants.py  feature_engineering.py  features_spec.py  train_model.py
(+63 files in other folders)
