[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-ml-service"
version = "2.0.0"
description = "Financial risk ML API (RandomForest + IsolationForest + SHAP)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.5.0,<3",
    "numpy>=1.26.0,<3",
    "scikit-learn>=1.5.0,<2",
    "joblib>=1.4.0,<2",
    "shap>=0.45.0,<0.50.0",
    "rich>=13.7.0,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "httpx>=0.27.0,<1",
    "ruff>=0.8.0,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "training*"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["app", "training", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
